Validate group and stratifier population basis and tests (#607)
* First commit:  Test group and stratifier population basis validation.

* Add dedicated R4PopulationBasisValidator.  Fix IllegalArgumentException vs InvalidRequestException.

* Rough implementation of validation for both group and stratifier population basis.  Lots of test failures.

* Introduce PopulationBasisValidator.  Have R4PopulationBasisValidator implement it and introduce a new Dstu3PopulationBasisValidator that implements it as well.  Inject PopulationBasisValidator everywhere with the appropriate implementation.

* Fix some tests with population basis for group evaluation.  Add more comments for tests that are still failing.

* Fix failure assertions.

* Refactor validator.  Introduce whitelists for population evaluation expressions depending on the scoring.  Fix some tests.

* Fix most tests with proper test data and assertions.  Tweak logic for stratifiers.

* Cleanup.

* Checkstyle fixes.  Spring fixes. Conditional logic to test bad booleanBasis.   First draft of validator test.

* Checkstyle fixes.  Spring fixes. Conditional logic to test bad booleanBasis.   First draft of validator test.

* Add more tests.  Tweak exception messages.

* Push down validator instantiation as far down as possible in the constructor hierarchy.